<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_text">Learn about image edition</string>
    <string name="default_date_text">10/05/2030</string>
    <string name="description_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen bookLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen bookLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="author_text">Alejandro Toledo González</string>
    <string name="next_text">Next</string>
    <string name="previous_text">Previous</string>
</resources>