<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/header_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_image_size"
            android:contentDescription="@string/title_text"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/celular" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_material_margin"
            android:layout_marginTop="@dimen/default_material_margin"
            android:text="@string/title_text"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/header_image_view"
            app:layout_constraintTop_toBottomOf="@+id/header_image_view" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_material_margin"
            android:text="@string/default_date_text"
            android:textSize="@dimen/default_font_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_text_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_material_margin"
            android:layout_marginTop="@dimen/default_material_margin"
            android:layout_marginEnd="@dimen/default_material_margin"
            android:ems="10"
            android:gravity="start|top"
            android:text="@string/description_text"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/header_image_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/header_image_view"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

        <TextView
            android:id="@+id/author_text_view"
            android:layout_width="@dimen/author_text_view_with"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_material_margin"
            android:layout_marginEnd="@dimen/default_material_margin"
            android:text="@string/author_text"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            app:layout_constraintBaseline_toBaselineOf="@+id/previous_button"
            app:layout_constraintEnd_toStartOf="@+id/previous_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_material_margin"
            android:layout_marginEnd="@dimen/default_material_margin"
            android:layout_marginBottom="@dimen/default_material_margin"
            android:text="@string/next_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_material_margin"
            android:layout_marginEnd="@dimen/default_material_margin"
            android:layout_marginBottom="@dimen/default_material_margin"
            android:text="@string/previous_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>